--- a/x86.config
+++ b/x86.config
@@ -53,9 +53,9 @@ CONFIG_PACKAGE_kmod-usb-net-rtl8150=y
 CONFIG_PACKAGE_kmod-usb-net-rtl8152=y
 
 ### Virtualization
-CONFIG_PACKAGE_kmod-kvm-amd=y
-CONFIG_PACKAGE_kmod-kvm-intel=y
-CONFIG_PACKAGE_kmod-kvm-x86=y
+#CONFIG_PACKAGE_kmod-kvm-amd=y
+#CONFIG_PACKAGE_kmod-kvm-intel=y
+#CONFIG_PACKAGE_kmod-kvm-x86=y
 
 ### Ethernet Support
 CONFIG_PACKAGE_kmod-igc=y
@@ -176,24 +176,25 @@ CONFIG_PACKAGE_luci-app-openclash=y
 CONFIG_PACKAGE_luci-app-adbyby-plus=y
 CONFIG_PACKAGE_luci-app-adguardhome=y
 CONFIG_PACKAGE_luci-app-unblockneteasemusic=y
+CONFIG_PACKAGE_luci-theme-argon=y
 
 # QEMU
-CONFIG_PACKAGE_qemu-arm-softmmu=y
-CONFIG_PACKAGE_qemu-bridge-helper=y
-CONFIG_PACKAGE_qemu-firmware-efi=y
-CONFIG_PACKAGE_qemu-firmware-pxe=y
-CONFIG_PACKAGE_qemu-firmware-seabios=y
-CONFIG_PACKAGE_qemu-firmware-seavgabios=y
-CONFIG_PACKAGE_qemu-ga=y
-CONFIG_PACKAGE_qemu-img=y
-CONFIG_PACKAGE_qemu-keymaps=y
-CONFIG_PACKAGE_qemu-nbd=y
-CONFIG_PACKAGE_qemu-x86_64-softmmu=y
-CONFIG_PACKAGE_virtio-console-helper=y
-CONFIG_QEMU_DEV_USB=y
-CONFIG_QEMU_UI_SPICE=y
-CONFIG_QEMU_UI_VNC=y
-CONFIG_QEMU_UI_VNC_JPEG=y
+#CONFIG_PACKAGE_qemu-arm-softmmu=y
+#CONFIG_PACKAGE_qemu-bridge-helper=y
+#CONFIG_PACKAGE_qemu-firmware-efi=y
+#CONFIG_PACKAGE_qemu-firmware-pxe=y
+#CONFIG_PACKAGE_qemu-firmware-seabios=y
+#CONFIG_PACKAGE_qemu-firmware-seavgabios=y
+#CONFIG_PACKAGE_qemu-ga=y
+#CONFIG_PACKAGE_qemu-img=y
+#CONFIG_PACKAGE_qemu-keymaps=y
+#CONFIG_PACKAGE_qemu-nbd=y
+#CONFIG_PACKAGE_qemu-x86_64-softmmu=y
+#CONFIG_PACKAGE_virtio-console-helper=y
+#CONFIG_QEMU_DEV_USB=y
+#CONFIG_QEMU_UI_SPICE=y
+#CONFIG_QEMU_UI_VNC=y
+#CONFIG_QEMU_UI_VNC_JPEG=y
 
 # System Utilities
 CONFIG_PACKAGE_acl=y
