--- a/x86.config
+++ b/x86.config
@@ -18,6 +18,7 @@ CONFIG_LINUX_5_10=y
 CONFIG_TESTING_KERNEL=y
 
 # luci-app
+CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_chinadns-ng=y
 CONFIG_PACKAGE_luci-app-passwall=y
 CONFIG_PACKAGE_luci-app-passwall2=y
