--- a/x86.config
+++ b/x86.config
@@ -19,6 +19,7 @@ CONFIG_TESTING_KERNEL=y
 
 # luci-app
 CONFIG_PACKAGE_luci-theme-argon=y
+CONFIG_PACKAGE_luci-theme-bootstrap=y
 CONFIG_PACKAGE_chinadns-ng=y
 CONFIG_PACKAGE_luci-app-passwall=y
 CONFIG_PACKAGE_luci-app-passwall2=y
